--- a/index.html
+++ b/index.html
@@ -7,53 +7,55 @@
     <title>Sign-Up Form</title>
 </head>
 <body>
-    <div class="body">
-        <div class="bckgnd-image">
-            <img src="./images/costa-rica-9301364_1280.jpg" href="A colorful toucan.">
+    <div class="bckgnd-img-container">
+        <img class="bckgnd-img" src="./images/costa-rica-9301364_1280.jpg" href="A colorful toucan.">
+        <div class="logo-container">
+            <img class="logo" src="./images/raven-icon.svg" href="Raven Logo">
         </div>
-        <div class="main-content">
-            <div>
-                <p>
-                    This is not a real online service! You know you need something like this in your life to
-                    help you realize your deepest dreams. Sign up <em>now</em> to get started.
-                </p>
-                <p>You <em>know</em> you want to.</p>
-            </div>
-            <form action="#" method="post">
-                <h1>Let's do this!</h1>
-                <div class="user-inputs">
-                    <div>
-                        <label for="first-name">FIRST NAME</label>
-                        <input type="text" id="first-name"  name="first-name" required>
-                    </div>
-                    <div>
-                        <label for="last-name">LAST NAME</label>
-                        <input type="text" id="last-name" name="last-name" required>
-                    </div>
-                    <div>
-                        <label for="email">EMAIL</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div>
-                        <label for="phone">PHONE NUMBER</label>
-                        <input type="tel" id="phone" name="phone" required>
-                    </div>
-                    <div>
-                        <label for="pass">PASSWORD</label>
-                        <input type="password" id="password" name="password" required>
-                    </div>
-                    <div>
-                        <label for="pass-conf">CONFIRM PASSWORD</label>
-                        <input type="password" id="pass-conf" name="pass-conf" required>
-                    </div>
+    </div>
+
+    <div class="main-content">
+        <div class="bold">
+            <p>
+                This is not a real online service! You know you need something like this in your life to
+                help you realize your deepest dreams. Sign up <em>now</em> to get started.
+            </p>
+            <p>You <em>know</em> you want to.</p>
+        </div>
+        <form action="#" method="post">
+            <p class="bold">Let's do this!</p>
+            <div class="user-inputs">
+                <div>
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text" id="first-name"  name="first-name" required>
                 </div>
-                <div class="btn-container">
-                    <button type="submit">Create Account</button>
+                <div>
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text" id="last-name" name="last-name" required>
                 </div>
-            </form>
-            <div>
-                <p>Already have an account? <span>Log in</span></p>
+                <div>
+                    <label for="email">EMAIL</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div>
+                    <label for="phone">PHONE NUMBER</label>
+                    <input type="tel" id="phone" name="phone" required>
+                </div>
+                <div>
+                    <label for="pass">PASSWORD</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div>
+                    <label for="pass-conf">CONFIRM PASSWORD</label>
+                    <input type="password" id="pass-conf" name="pass-conf" required>
+                </div>
             </div>
+            <div class="btn-container">
+                <button type="submit">Create Account</button>
+            </div>
+        </form>
+        <div>
+            <p>Already have an account? <span>Log in</span></p>
         </div>
     </div>
 </body>
