--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <img class="bckgnd-img" src="./images/costa-rica-9301364_1280.jpg" href="A colorful toucan.">
         <div class="logo-container">
             <img class="logo" src="./images/raven-icon.svg" href="Raven Logo">
+            <div class="logo">TOUCAN</div>
         </div>
     </div>
 
