Add image credit.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <img class="logo" src="./images/raven-icon.svg" href="Raven Logo">
             <div class="logo">TOUCAN</div>
         </div>
+        <div class="img-credit">
+            Image by Herbert Bieser from Pixabay
+        </div>
     </div>
 
     <div class="main-content">
