--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="main-content">
-        <div class="bold">
+        <div class="header bold">
             <p>
                 This is not a real online service! You know you need something like this in your life to
                 help you realize your deepest dreams. Sign up <em>now</em> to get started.
@@ -29,37 +29,41 @@
         <form action="#" method="post">
             <p class="bold">Let's do this!</p>
             <div class="user-inputs">
-                <div>
-                    <label for="first-name">FIRST NAME</label>
-                    <input type="text" id="first-name"  name="first-name" required>
+                <div class="user-inputs-left">
+                    <div>
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name"  name="first-name" required>
+                    </div>
+                    <div>
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last-name" required>
+                    </div>
+                    <div>
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
                 </div>
-                <div>
-                    <label for="last-name">LAST NAME</label>
-                    <input type="text" id="last-name" name="last-name" required>
-                </div>
-                <div>
-                    <label for="email">EMAIL</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div>
-                    <label for="phone">PHONE NUMBER</label>
-                    <input type="tel" id="phone" name="phone" required>
-                </div>
-                <div>
-                    <label for="pass">PASSWORD</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div>
-                    <label for="pass-conf">CONFIRM PASSWORD</label>
-                    <input type="password" id="pass-conf" name="pass-conf" required>
+                <div class="user-inputs-right">
+                    <div>
+                        <label for="phone">PHONE NUMBER</label>
+                        <input type="tel" id="phone" name="phone" required>
+                    </div>
+                    <div>
+                        <label for="pass">PASSWORD</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div>
+                        <label for="pass-conf">CONFIRM PASSWORD</label>
+                        <input type="password" id="pass-conf" name="pass-conf" required>
+                    </div>
                 </div>
             </div>
             <div class="btn-container">
                 <button type="submit">Create Account</button>
             </div>
         </form>
-        <div>
-            <p>Already have an account? <span>Log in</span></p>
+        <div class="footer">
+            <p>Already have an account? <span class="green">Log in</span></p>
         </div>
     </div>
 </body>
