--- a/index.html
+++ b/index.html
@@ -32,38 +32,38 @@
                 <div class="user-inputs-left">
                     <div>
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" id="first-name"  name="first-name" required>
-                    </div>
-                    <div>
-                        <label for="last-name">LAST NAME</label>
-                        <input type="text" id="last-name" name="last-name" required>
+                        <input type="text" id="first-name"  name="first-name">
                     </div>
                     <div>
                         <label for="email">EMAIL</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="email">
+                    </div>
+                    <div>
+                        <label for="pass">PASSWORD</label>
+                        <input type="password" id="password" name="password">
                     </div>
                 </div>
                 <div class="user-inputs-right">
                     <div>
-                        <label for="phone">PHONE NUMBER</label>
-                        <input type="tel" id="phone" name="phone" required>
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="last-name">
                     </div>
                     <div>
-                        <label for="pass">PASSWORD</label>
-                        <input type="password" id="password" name="password" required>
+                        <label for="phone">PHONE NUMBER</label>
+                        <input type="tel" id="phone" name="phone">
                     </div>
                     <div>
                         <label for="pass-conf">CONFIRM PASSWORD</label>
-                        <input type="password" id="pass-conf" name="pass-conf" required>
+                        <input type="password" id="pass-conf" name="pass-conf">
                     </div>
                 </div>
             </div>
             <div class="btn-container">
-                <button type="submit">Create Account</button>
+                <button class="bold" type="submit">Create Account</button>
             </div>
         </form>
         <div class="footer">
-            <p>Already have an account? <span class="green">Log in</span></p>
+            <p>Already have an account? <span class="green bold">Log in</span></p>
         </div>
     </div>
 </body>
