--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     </div>
                     <div>
                         <label for="email">EMAIL</label>
-                        <input type="email" id="email" name="email">
+                        <input type="email" id="email" name="email" placeholder="youremail@email.com">
                     </div>
                     <div>
                         <label for="pass">PASSWORD</label>
-                        <input type="password" id="password" name="password">
+                        <input type="password" id="password" name="password" required>
                     </div>
                 </div>
                 <div class="user-inputs-right">
@@ -50,11 +50,11 @@
                     </div>
                     <div>
                         <label for="phone">PHONE NUMBER</label>
-                        <input type="tel" id="phone" name="phone">
+                        <input type="tel" id="phone" name="phone" placeholder="555-987-1234" pattern="\d{3}-\d{3}-\d{4}">
                     </div>
                     <div>
                         <label for="pass-conf">CONFIRM PASSWORD</label>
-                        <input type="password" id="pass-conf" name="pass-conf">
+                        <input type="password" id="pass-conf" name="pass-conf" required>
                     </div>
                 </div>
             </div>
